--- a/index.html
+++ b/index.html
@@ -1,101 +1,124 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Sakura Sedaia</title>
+<html lang="en">
 
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+	<!--  Meta  -->
+	<meta charset="UTF-8">
+	<title>Home page | PORTFOLIO</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!--  Styles  -->
+	<link rel="stylesheet" href="assets/styles/main-style.css">
+	<link href="https://unpkg.com/pattern.css" rel="stylesheet">
+</head>
 
-    <link rel="shortcut icon" href="assets/images/Favicon/favicon.ico" />
+<body>
+	<!-- HEAD START -->
+	
+	<div class="header pattern-diagonal-stripes-md">
+		<div class="header-content">
+			<div class="header-top">
+				<div class="header-info">
+					Sakura Sedaia
+				</div>
+			</div>
+			<br>
+			<div class="header-middle">
+				<h1>Landing page</h1>
+				<h2>
+					Welcome to the site that is built to represent Sakura and inform you of all of his projects
+				</h2>
+			</div>
+			<br>
+			<div class="header-bottom">
+				<div class="header-art">
+					<span>Header Art by: </span>
+				</div>
+			</div>
+			<div class="navigation">
+				<div class="nav-content">
+					<div class="nav-item">Home</div>
+					<div class="nav-item">Rigs</div>
+					<div class="nav-item">Renders</div>
+					<div class="nav-item">Animations</div>
+					<div class="nav-item">Contact</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
-    <!-- Internal Stylesheets -->
-    <link href="assets/styles/main_style.css" rel="stylesheet" />
+	<!-- HEAD END -->
 
-    <!-- External Stylesheets -->
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <link
-      href="assets/styles/main_style.css"
-      rel="stylesheet"
-      type="text/css"
-    />
-  </head>
+	
+		<!-- ABOUT BEGIN -->
+		
+		<!-- ABOUT END -->
 
-  <body>
-    <!-- Side Navigation Start -->
-    <div class="sideNav" id="sideNav">
-      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">
-        &times;
-      </a>
-      <a onclick="openInternal('index')">Home</a>
-      <a onclick="openInternal('about')">About</a>
-      <a onclick="openInternal('rigs')">Rigs</a>
-      <a onclick="openInternal('contact')">Contact</a>
-      
-      <a onclick="openInternal('sacr-wiki/wiki_home')">Rig Wiki</a>
-    </div>
+		<!-- FAQ -->
+		<div class="faq pattern-grid-lg">
+			<div class="faq-content">
+					<h2>FAQ</h2>
 
-    <!-- Main Viewport Start -->
-    <div class="viewport" id="viewport">
-      <div class="header-contain" id="header">
-        <div class="above-nav">
-          <div class="logo" href="javascript:void(0)" onclick="openNav()">
-            <span class="material-icons" id="sideNavBurger">menu</span>
-            <span class="text">Sakura Sedaia</span>
-          </div>
-          <div class="info">Personal Portfolio</div>
-          <div class="xmasCounter" id="xmasContainer">
-            Days until Christmas:
-            <span id="xmasCounter">Undefined</span>
-          </div>
-        </div>
-        <!-- Header Content -->
-        <div class="header-content">
-          <div class="header-text">
-            <h1>Personal Portfolio - Home</h1>
-            <h4>Provided by you're local Internet Neko</h4>
-          </div>
-        </div>
-      </div>
+					<div class="faq-question">
+							<span class="faq-question-head"><strong>Q</strong>: Why does Sakura use a Female alias?</span>
+							<br>
+							<strong>A</strong>: The real reason for this cannot be remembered, but since the Alias stuck it has remained in use since 2018 and likely will remain for a long time
+					</div>
 
-      <!-- End Header -->
+					<div class="faq-question">
+							<span class="faq-question-head"><strong>Q</strong>: When did Sakura start his first YouTube channel?</span>
+							<br>
+							<strong>A</strong>: Sakura first started YouTube in 2014 when he created his first channel called PokeKid206 (Currently EndGamer90), the current channel (Sakura Sedaia) was made in November 2016, which was originally named Ender Graphics.
+					</div>
 
-      <!-- Begin page Content -->
-      <div class="content-section">
-        <div class="about">
-          <div class="title">
-            <h1>Who am I</h1>
-            <p>
-              I am a <a id="age">null</a> year old 3D Animator and Website Designer from Iowa, I started 3D Animation when I was 12 and Website Design when I was 14. I mainly work with Minecraft Animation and build simple websites, I eventually hope to turn Website Design into a carreer and 3D Animation into a suitable hobby. Not much is going on Channel wise due to Education reasons, but once education is done and I am available I will be ramping up production on two of my series, Parallel Z and Lost Angel. As well as continuing efforts on<em>"The Beginnings"</em> by <a class="yt-links-thin" onclick="openExternal('noData',-1)">Frostlight</a>, <em>"Songs of War Seasons 2-3"</em> by <a class="yt-links-thin" onclick="openExternal('noData',-1)">Knights of Ardonia</a>, and<em>"Operia"</em> by <a class="yt-links-thin" onclick="openExternal('www.youtube.com/channel/UCFls8rTZA1rCgFmWUBcmdlg',1)">RedBlue115</a>.
-            </p>
-          </div>
-        </div>
-        <div class="second-row">
-          <div class="index-rig-display">
-            <div class="background"></div>
-            <div class="content">
-              <div class="rig-display-text">
-                <h2>Check out the SACR and my Asset's page</h2>
-                <p>All 100% free with no flags attatched</p>
-              </div>
-              <div class="rig-nav">
-                <div class="btn">View Rig Gallery</div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+					<div class="faq-question">
+							<span class="faq-question-head"><strong>Q</strong>: What hobbies does Sakura have?</span>
+							<br>
+							<strong>A</strong>: He has a large amount of hobbies, mostly involving the Computer such as Video Games, 3D Rendering, and Website Design/Development
+					</div>
+				<h2>Studio Questions</h2>
+				<div class="faq-question">
+							<span class="faq-question-head"><strong>Q</strong>: Which SoW Animation crew are you with, Helios, PoA, or KoA?</span>
+							<br>
+							<strong>A</strong>: I am an Animator with KoA
+					</div>
+				<div class="faq-question">
+							<span class="faq-question-head"><strong>Q</strong>: What Minecraft Machinema Channel did you start off with?</span>
+							<br>
+							<strong>A</strong>: I was originally brought on as an Animator for Alpha Studios, but eventually ended up taking part in multiple roles there. Eventually I was even one of the core leaders, but due to IRL stresses I was forced to depart the studio
+					</div>
+					<div class="faq-footer">This FAQ will be updated as more questions are asked
+					</div>
+			</div>
+	</div>
+	<!-- FOOT BEGIN -->
+	<div class="footer pattern-grid-lg">
+			<div class="clusterfuck">
+					<div>
+							<h4>Site Links</h4>
+							<div onclick="openInternal('index.html')"><span class="link" data-style="default">Home</span></div>
+							<div><span class="link" data-style="default">Contact</span></div>
+							<div onclick="openInternal('rig-library.html')"><span class="link" data-style="default">Rigs</span></div>
+							<div><span class="link" data-style="default">Projects</span></div>
+					</div>
+					<div>
+							<h4>Social Links</h4>
+							<div onclick="openExternal('https://youtube.com/c/SakuraSedaia')"><span class="link" data-style="default">Youtube</span></div>
+							<div onclick="openExternal('https://github.com/SakuraSedaia')"><span class="link" data-style="default">GitHub</span></div>
+							<div onclick="openExtennal('https://codepen.io/Sakura-Sedaia')"><span class="link" data-style="default">Codepen</span></div>
+					</div>
+					<div>
+							<h4><span>External API's</span></h4>
+							<div onclick="openExternal('https://michalsnik.github.io/aos/')"><span class="link" data-style="default">AoS.js</span></div>
+							<div onclick="openExternal('https://fonts.google.com/')"><span class="link" data-style="default">Google Fonts</span></div>
+							<div onclick="openExternal('https://bansal.io/pattern-css')"><span class="link" data-style="default">pattern.css</span></div>
+					</div>
+			</div>
+			<div class="trademarks"></div>
 
-    <!-- Scripts -->
-    <script src="assets/scripts/responsive.js"></script>
-    <script id="ageScriptStartup">
-      // Age Display Set
-      var ageDisplay = document.getElementById('age')
-      ageDisplay.innerHTML = sakuraAge
-    </script>
-  </body>
+	</div>
+	<!-- FOOT END -->
+
+	<script src="assets/scripts/script.js"></script>
+</body>
+
 </html>
