Update to Prototype

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
 	<!-- HEAD START -->
 	
-	<div class="header pattern-diagonal-stripes-md">
+	<div class="header">
+		<div class="header-pattern pattern-diagonal-stripes-sm">
 		<div class="header-content">
 			<div class="header-top">
 				<div class="header-info">
@@ -31,32 +32,42 @@
 			<br>
 			<div class="header-bottom">
 				<div class="header-art">
-					<span>Header Art by: </span>
+					<span>Header Art by: Sakura Sedaia</span>
 				</div>
 			</div>
 			<div class="navigation">
 				<div class="nav-content">
-					<div class="nav-item">Home</div>
-					<div class="nav-item">Rigs</div>
-					<div class="nav-item">Renders</div>
-					<div class="nav-item">Animations</div>
-					<div class="nav-item">Contact</div>
+					<div class="nav-item" onclick="openInternal('index.html')">Home</div>
+					<div class="nav-item" onclick="openInternal('rigs.html')">Rigs</div>
+					<div class="nav-item" onclick="openInternal('renders.html')">Renders</div>
+					<div class="nav-item" onclick="openInternal('animations.html')">Animations</div>
+					<div class="nav-item" onclick="openInternal('wiki/wiki-home.html')">SACR Wiki</div>
 				</div>
 			</div>
 		</div>
+	</div>
 	</div>
 
 	<!-- HEAD END -->
 
 	
 		<!-- ABOUT BEGIN -->
-		
+		<div class="about">
+			<h2>Who is I?</h2>
+			<p>
+				I am an independant 17 Year old YouTube content creator and fast food worker with too much freetime that has partnered with multiple studios. I got my start in 2012 with the creation of my first Channel, at the time... named PokeKid206, yeah terrible name right? Well that channel got me started inside the YouTube atmosphere, though about 2 years later it would be pretty well abandoned as I made the complete change over to my current Channel, originally called Ender Graphics but has evolved into my current personality and name, Sakura Sedaia.
+			</p>
+			<br>
+			<p>
+				Sometime in October 2018 I started in a small Machinima "Studio" called Alpha Studios, where I would begin making a name for myself as a 3D Minecraft Animator and Render artist.
+			</p>
+		</div>
 		<!-- ABOUT END -->
 
 		<!-- FAQ -->
 		<div class="faq pattern-grid-lg">
 			<div class="faq-content">
-					<h2>FAQ</h2>
+					<h2>?  FAQ  ?</h2>
 
 					<div class="faq-question">
 							<span class="faq-question-head"><strong>Q</strong>: Why does Sakura use a Female alias?</span>
@@ -84,7 +95,7 @@
 				<div class="faq-question">
 							<span class="faq-question-head"><strong>Q</strong>: What Minecraft Machinema Channel did you start off with?</span>
 							<br>
-							<strong>A</strong>: I was originally brought on as an Animator for Alpha Studios, but eventually ended up taking part in multiple roles there. Eventually I was even one of the core leaders, but due to IRL stresses I was forced to depart the studio
+							<strong>A</strong>: I was originally brought on as an Animator for Alpha Studios, but eventually ended up taking part in multiple roles there. Eventually I was even one of the core leaders, but due to IRL stresses I was forced to depart from the studio
 					</div>
 					<div class="faq-footer">This FAQ will be updated as more questions are asked
 					</div>
@@ -113,7 +124,9 @@
 							<div onclick="openExternal('https://bansal.io/pattern-css')"><span class="link" data-style="default">pattern.css</span></div>
 					</div>
 			</div>
-			<div class="trademarks"></div>
+			<div class="trademarks">
+				<div>&copy; 2021 Sakura Sedaia, All Rights Reserved</div>
+			</div>
 
 	</div>
 	<!-- FOOT END -->
