Update to Prototype

--- a/rigs.html
+++ b/rigs.html
@@ -51,18 +51,7 @@
 	<!-- HEAD END -->
 
 	
-		<!-- ABOUT BEGIN -->
-		<div class="about">
-			<h2>Who is I?</h2>
-			<p>
-				I am an independant 17 Year old YouTube content creator and fast food worker with too much freetime that has partnered with multiple studios. I got my start in 2012 with the creation of my first Channel, at the time... named PokeKid206, yeah terrible name right? Well that channel got me started inside the YouTube atmosphere, though about 2 years later it would be pretty well abandoned as I made the complete change over to my current Channel, originally called Ender Graphics but has evolved into my current personality and name, Sakura Sedaia.
-			</p>
-			<br>
-			<p>
-				Sometime in October 2018 I started in a small Machinima "Studio" called Alpha Studios, where I would begin making a name for myself as a 3D Minecraft Animator and Render artist.
-			</p>
-		</div>
-		<!-- ABOUT END -->
+		
 
 		<!-- FAQ -->
 		<div class="faq pattern-grid-lg">
@@ -70,34 +59,9 @@
 					<h2>?  FAQ  ?</h2>
 
 					<div class="faq-question">
-							<span class="faq-question-head"><strong>Q</strong>: Why does Sakura use a Female alias?</span>
+							<span class="faq-question-head"><strong>Q</strong>: What Software do these Rigs require?</span>
 							<br>
-							<strong>A</strong>: The real reason for this cannot be remembered, but since the Alias stuck it has remained in use since 2018 and likely will remain for a long time
-					</div>
-
-					<div class="faq-question">
-							<span class="faq-question-head"><strong>Q</strong>: When did Sakura start his first YouTube channel?</span>
-							<br>
-							<strong>A</strong>: Sakura first started YouTube in 2014 when he created his first channel called PokeKid206 (Currently EndGamer90), the current channel (Sakura Sedaia) was made in November 2016, which was originally named Ender Graphics.
-					</div>
-
-					<div class="faq-question">
-							<span class="faq-question-head"><strong>Q</strong>: What hobbies does Sakura have?</span>
-							<br>
-							<strong>A</strong>: He has a large amount of hobbies, mostly involving the Computer such as Video Games, 3D Rendering, and Website Design/Development
-					</div>
-				<h2>Studio Questions</h2>
-				<div class="faq-question">
-							<span class="faq-question-head"><strong>Q</strong>: Which SoW Animation crew are you with, Helios, PoA, or KoA?</span>
-							<br>
-							<strong>A</strong>: I am an Animator with KoA
-					</div>
-				<div class="faq-question">
-							<span class="faq-question-head"><strong>Q</strong>: What Minecraft Machinema Channel did you start off with?</span>
-							<br>
-							<strong>A</strong>: I was originally brought on as an Animator for Alpha Studios, but eventually ended up taking part in multiple roles there. Eventually I was even one of the core leaders, but due to IRL stresses I was forced to depart from the studio
-					</div>
-					<div class="faq-footer">This FAQ will be updated as more questions are asked
+							<strong>A</strong>: All Rigs posted on this page are made and tested in Blender 2.83.15, so any version of Blender newer than 2.8 can use these rigs seemelessly, but be cautious trying to use these rigs in anything older (Such as 2.79 or older) as the Drivers and Scripts (If any) can and will break.
 					</div>
 			</div>
 	</div>
