--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 # Header Image is defined here in the HTML on the Style Attribute for the Header Container, it is not in the SCSS File
 -->
     <div class="header-contain" id="header" style="
-          background-image: url('https://sakura-sedaia.com/assets/images/WPRenders/BarSet_Preview4.png');
+          background-image: url('assets/images/WPRenders/Happy_Bday.jpg');
         ">
       <!-- Header Content -->
       <div class="header-content">
