--- a/sacr-rig.html
+++ b/sacr-rig.html
@@ -56,7 +56,7 @@
         Contact
       </div>
     </nav>
-    <div class="header-contain" id="header" style="background-image: url('assets/images/WPRenders/BarSet_Preview4.png');">
+    <div class="header-contain" id="header" style="background-image: url('assets/images/WPRenders/Happy_Bday.jpg');">
       <!-- Header Content -->
       <div class="header-content">
         <div class="header-text">
