Update to Prototype

--- a/index.html
+++ b/index.html
@@ -13,120 +13,137 @@
 
 <body>
 	<!-- HEAD START -->
-	
+
 	<div class="header">
 		<div class="header-pattern pattern-diagonal-stripes-sm">
-		<div class="header-content">
-			<div class="header-top">
-				<div class="header-info">
-					Sakura Sedaia
+			<div class="header-content">
+				<div class="header-top">
+					<div class="header-info">
+						Sakura Sedaia
+					</div>
 				</div>
-			</div>
-			<br>
-			<div class="header-middle">
-				<h1>Landing page</h1>
-				<h2>
-					Welcome to the site that is built to represent Sakura and inform you of all of his projects
-				</h2>
-			</div>
-			<br>
-			<div class="header-bottom">
-				<div class="header-art">
-					<span>Header Art by: Sakura Sedaia</span>
+				<br>
+				<div class="header-middle">
+					<h1>Landing page</h1>
+					<h2>
+						Welcome to the site that is built to represent Sakura and inform you of all of his projects
+					</h2>
 				</div>
-			</div>
-			<div class="navigation">
-				<div class="nav-content">
-					<div class="nav-item" onclick="openInternal('index.html')">Home</div>
-					<div class="nav-item" onclick="openInternal('rigs.html')">Rigs</div>
-					<div class="nav-item" onclick="openInternal('renders.html')">Renders</div>
-					<div class="nav-item" onclick="openInternal('animations.html')">Animations</div>
-					<div class="nav-item" onclick="openInternal('wiki/wiki-home.html')">SACR Wiki</div>
+				<br>
+				<div class="header-bottom">
+					<div class="header-art">
+						<span hidden>Header Art by: Sakura</span>
+					</div>
+				</div>
+				<div class="navigation">
+					<div class="nav-content">
+						<div class="nav-item" onclick="openInternal('index.html')">Home</div>
+						<div class="nav-item" onclick="openInternal('rigs.html')">Rigs</div>
+						<div class="nav-item" onclick="openInternal('wiki/wiki-home.html')">Rig Wiki</div>
+					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 	</div>
 
 	<!-- HEAD END -->
 
-	
-		<!-- ABOUT BEGIN -->
-		<div class="about">
+
+	<!-- ABOUT BEGIN -->
+	<div class="about pattern-grid-lg">
+		<div class="about-content">
 			<h2>Who is I?</h2>
 			<p>
-				I am an independant 17 Year old YouTube content creator and fast food worker with too much freetime that has partnered with multiple studios. I got my start in 2012 with the creation of my first Channel, at the time... named PokeKid206, yeah terrible name right? Well that channel got me started inside the YouTube atmosphere, though about 2 years later it would be pretty well abandoned as I made the complete change over to my current Channel, originally called Ender Graphics but has evolved into my current personality and name, Sakura Sedaia.
+				I am an independant 18 Year old YouTube content creator and fast food worker with too much freetime that
+				has partnered with multiple studios. I got my start in 2012 with the creation of my first Channel, at
+				the time... named PokeKid206, yeah terrible name right? Well that channel got me started inside the
+				YouTube atmosphere, though about 2 years later it would be pretty well abandoned as I made the complete
+				change over to my current Channel, originally called Ender Graphics but has evolved into my current
+				personality and name, Sakura Sedaia.
 			</p>
 			<br>
 			<p>
-				Sometime in October 2018 I started in a small Machinima "Studio" called Alpha Studios, where I would begin making a name for myself as a 3D Minecraft Animator and Render artist.
+				Sometime in October 2018 I started in a small Machinima "Studio" called Alpha Studios, where I would
+				begin making a name for myself as a 3D Minecraft Animator and Render artist.
 			</p>
 		</div>
-		<!-- ABOUT END -->
+		<div class="faq-content">
+			<h2>? FAQ ?</h2>
 
-		<!-- FAQ -->
-		<div class="faq pattern-grid-lg">
-			<div class="faq-content">
-					<h2>?  FAQ  ?</h2>
-
-					<div class="faq-question">
-							<span class="faq-question-head"><strong>Q</strong>: Why does Sakura use a Female alias?</span>
-							<br>
-							<strong>A</strong>: The real reason for this cannot be remembered, but since the Alias stuck it has remained in use since 2018 and likely will remain for a long time
-					</div>
-
-					<div class="faq-question">
-							<span class="faq-question-head"><strong>Q</strong>: When did Sakura start his first YouTube channel?</span>
-							<br>
-							<strong>A</strong>: Sakura first started YouTube in 2014 when he created his first channel called PokeKid206 (Currently EndGamer90), the current channel (Sakura Sedaia) was made in November 2016, which was originally named Ender Graphics.
-					</div>
-
-					<div class="faq-question">
-							<span class="faq-question-head"><strong>Q</strong>: What hobbies does Sakura have?</span>
-							<br>
-							<strong>A</strong>: He has a large amount of hobbies, mostly involving the Computer such as Video Games, 3D Rendering, and Website Design/Development
-					</div>
-				<h2>Studio Questions</h2>
-				<div class="faq-question">
-							<span class="faq-question-head"><strong>Q</strong>: Which SoW Animation crew are you with, Helios, PoA, or KoA?</span>
-							<br>
-							<strong>A</strong>: I am an Animator with KoA
-					</div>
-				<div class="faq-question">
-							<span class="faq-question-head"><strong>Q</strong>: What Minecraft Machinema Channel did you start off with?</span>
-							<br>
-							<strong>A</strong>: I was originally brought on as an Animator for Alpha Studios, but eventually ended up taking part in multiple roles there. Eventually I was even one of the core leaders, but due to IRL stresses I was forced to depart from the studio
-					</div>
-					<div class="faq-footer">This FAQ will be updated as more questions are asked
-					</div>
+			<div class="faq-question">
+				<span class="faq-question-head"><strong>Q</strong>: Why does Sakura use a Female alias?</span>
+				<br>
+				<strong>A</strong>: The real reason for this cannot be remembered, but since the Alias stuck it has
+				remained in use since 2018 and likely will remain for a long time
 			</div>
+
+			<div class="faq-question">
+				<span class="faq-question-head"><strong>Q</strong>: When did Sakura start his first YouTube
+					channel?</span>
+				<br>
+				<strong>A</strong>: Sakura first started YouTube in 2014 when he created his first channel called
+				PokeKid206 (Currently EndGamer90), the current channel (Sakura Sedaia) was made in November 2016, which
+				was originally named Ender Graphics.
+			</div>
+
+			<div class="faq-question">
+				<span class="faq-question-head"><strong>Q</strong>: What hobbies does Sakura have?</span>
+				<br>
+				<strong>A</strong>: He has a large amount of hobbies, mostly involving the Computer such as Video Games,
+				3D Rendering, and Website Design/Development
+			</div>
+			<h2>Studio Questions</h2>
+			<div class="faq-question">
+				<span class="faq-question-head"><strong>Q</strong>: What Animation Studios/Groups are you in?</span>
+				<br>
+				<strong>A</strong>: I am an Animator with KoA, Frostlight Studios, and the Operia Project, as well as
+				run my own private group for work on Viella
+			</div>
+			<div class="faq-question">
+				<span class="faq-question-head"><strong>Q</strong>: What Minecraft Machinema Channel did you start off
+					with?</span>
+				<br>
+				<strong>A</strong>: I was originally brought on as an Animator for Alpha Studios, but eventually ended
+				up taking part in multiple roles there. Eventually I was even one of the core leaders, but due to IRL
+				stresses I was forced to depart from the studio
+			</div>
+			<div class="faq-footer">This FAQ will be updated as more questions are asked
+			</div>
+		</div>
+		<!-- ABOUT END -->
 	</div>
 	<!-- FOOT BEGIN -->
 	<div class="footer pattern-grid-lg">
-			<div class="clusterfuck">
-					<div>
-							<h4>Site Links</h4>
-							<div onclick="openInternal('index.html')"><span class="link" data-style="default">Home</span></div>
-							<div><span class="link" data-style="default">Contact</span></div>
-							<div onclick="openInternal('rig-library.html')"><span class="link" data-style="default">Rigs</span></div>
-							<div><span class="link" data-style="default">Projects</span></div>
-					</div>
-					<div>
-							<h4>Social Links</h4>
-							<div onclick="openExternal('https://youtube.com/c/SakuraSedaia')"><span class="link" data-style="default">Youtube</span></div>
-							<div onclick="openExternal('https://github.com/SakuraSedaia')"><span class="link" data-style="default">GitHub</span></div>
-							<div onclick="openExtennal('https://codepen.io/Sakura-Sedaia')"><span class="link" data-style="default">Codepen</span></div>
-					</div>
-					<div>
-							<h4><span>External API's</span></h4>
-							<div onclick="openExternal('https://michalsnik.github.io/aos/')"><span class="link" data-style="default">AoS.js</span></div>
-							<div onclick="openExternal('https://fonts.google.com/')"><span class="link" data-style="default">Google Fonts</span></div>
-							<div onclick="openExternal('https://bansal.io/pattern-css')"><span class="link" data-style="default">pattern.css</span></div>
-					</div>
+		<div class="clusterfuck">
+			<div>
+				<h4>Site Links</h4>
+				<div onclick="openInternal('index.html')"><span class="link" data-style="default">Home</span></div>
+				<div><span class="link" data-style="default">Contact</span></div>
+				<div onclick="openInternal('rig-library.html')"><span class="link" data-style="default">Rigs</span>
+				</div>
 			</div>
-			<div class="trademarks">
-				<div>&copy; 2021 Sakura Sedaia, All Rights Reserved</div>
+			<div>
+				<h4>Social Links</h4>
+				<div onclick="openExternal('https://youtube.com/c/SakuraSedaia')"><span class="link"
+						data-style="default">Youtube</span></div>
+				<div onclick="openExternal('https://github.com/SakuraSedaia')"><span class="link"
+						data-style="default">GitHub</span></div>
+				<div onclick="openExtennal('https://codepen.io/Sakura-Sedaia')"><span class="link"
+						data-style="default">Codepen</span></div>
 			</div>
+			<div>
+				<h4><span>External API's</span></h4>
+				<div onclick="openExternal('https://michalsnik.github.io/aos/')"><span class="link"
+						data-style="default">AoS.js</span></div>
+				<div onclick="openExternal('https://fonts.google.com/')"><span class="link" data-style="default">Google
+						Fonts</span></div>
+				<div onclick="openExternal('https://bansal.io/pattern-css')"><span class="link"
+						data-style="default">pattern.css</span></div>
+			</div>
+		</div>
+		<div class="trademarks">
+			<div>&copy; 2021 Sakura Sedaia, All Rights Reserved</div>
+		</div>
 
 	</div>
 	<!-- FOOT END -->
