--- a/rigs.html
+++ b/rigs.html
@@ -24,9 +24,9 @@
 			</div>
 			<br>
 			<div class="header-middle">
-				<h1>Landing page</h1>
+				<h1>Rigs</h1>
 				<h2>
-					Welcome to the site that is built to represent Sakura and inform you of all of his projects
+					A place to download all of Sakura's available rigs or access the Repositories to see past versions
 				</h2>
 			</div>
 			<br>
@@ -39,9 +39,7 @@
 				<div class="nav-content">
 					<div class="nav-item" onclick="openInternal('index.html')">Home</div>
 					<div class="nav-item" onclick="openInternal('rigs.html')">Rigs</div>
-					<div class="nav-item" onclick="openInternal('renders.html')">Renders</div>
-					<div class="nav-item" onclick="openInternal('animations.html')">Animations</div>
-					<div class="nav-item" onclick="openInternal('wiki/wiki-home.html')">SACR Wiki</div>
+					<div class="nav-item" onclick="openInternal('wiki/wiki.html')">Rig Wiki</div>
 				</div>
 			</div>
 		</div>
@@ -50,7 +48,29 @@
 
 	<!-- HEAD END -->
 
-	
+	<div class="rig-downloads pattern-grid-lg">
+		<div class="rig-content">
+		<h2>SACR Rig downloads</h2>
+		<p>Download the latest stable and experimental builds here. Stable releases are the more stable rigs while Experimental rigs are generally more up to date but can have some issues regarding stability, once a Experimental Rig is deemed stable enough it is then listed as the latest stable rig.</p>
+		<div id="stableRig" class="rig-button">
+			Stable
+			<br>
+			<span>R5 | 01/06/2021</span>
+		</div>
+		<div id="experimentalRig" class="rig-button">
+			Experimental
+			<br>
+			<span>E5.1_01 | 11/06/2021</span>
+		</div>
+		<div class="hyperlinks">
+		<ul>
+			<li><a class="link">SACR Stable Changelog</a></li>
+			<li><a class="link">SACR Experimental Changelog (Compared to Stable Release)</a></li>
+		</ul>
+		<span class="monospace">* All dates are in the dd/mm/yyyy format</span>
+	</div>
+	</div>
+	</div>
 		
 
 		<!-- FAQ -->
@@ -61,8 +81,14 @@
 					<div class="faq-question">
 							<span class="faq-question-head"><strong>Q</strong>: What Software do these Rigs require?</span>
 							<br>
-							<strong>A</strong>: All Rigs posted on this page are made and tested in Blender 2.83.15, so any version of Blender newer than 2.8 can use these rigs seemelessly, but be cautious trying to use these rigs in anything older (Such as 2.79 or older) as the Drivers and Scripts (If any) can and will break.
+							<strong>A</strong>: All Rigs posted on this page are made and tested in Blender 2.83.15 and newer LTS Builds, so any version of Blender newer than 2.83 can use these rigs seemelessly, but be cautious trying to use these rigs in anything older (Such as 2.79 or older) as the Drivers and Scripts (If any) can and will break.
 					</div>
+
+					<div class="faq-question">
+						<span class="faq-question-head"><strong>Q</strong>: When will the Wiki become available?</span>
+						<br>
+						<strong>A</strong>: The exact timeframe of when the Wiki for all my rigs is unknown, but I am putting work into the site as much as I can while maintaining all my other projects. The WIP Version of the wiki is online right now.
+				</div>
 			</div>
 	</div>
 	<!-- FOOT BEGIN -->
