--- a/wiki/wiki.html
+++ b/wiki/wiki.html
@@ -30,13 +30,10 @@
             <h2 data-aos="fade-up">Sakura's Character Rig</h2>
             <div class="sacr-col-contain">
                 <div class="flexbox-2 sacr-desc">
-                    <h3>What is SACR?</h3>
+                    <h3>What is Sakura's Character Rig?</h3>
                     <p>
-                        SACR is a Advanced Minecraft Rig designed and built inside Blender, it is designed to be usable
-                        for
-                        any purpose, while most versions up to now have been made with Animations in mind, but with the
-                        R5
-                        release, the plan is to add in features to make it more Single-frame Render friendly.
+                        Sakura's Character Rig, aka SACR, is an advanced Minecraft rig designed and built inside
+                        Blender, it is designed to be usable for any purpose, while most versions up to now have been made with Animations in mind, but with the R5 release more detail oriented features such as Pupils and enhanced Materials help make the rig more controllable for Single frame renders.
                     </p>
                     <p>Go to the download page for SACR</p>
                     <div class="button" onclick="window.open('https://sakura-sedaia.com/sacr-rig.html')">SACR Homepage
@@ -50,9 +47,10 @@
                         predecessor for SACR. Though any version of the Rig prior to R4 is extremely unstable and buggy,
                         as
                         well as laggy.
-                        <br><br>
-                        GitHub links:
                     </p>
+                    <br>
+                    <span class="git-link-head">GitHub links:</span>
+                    <br>
                     <div class="button" onclick="openSACRStable()">SACR Releases</div>
                     <div class="divider" data-style="vertical"></div>
                     <div class="button" onclick="openSACRExperimental()">SACR
@@ -105,7 +103,8 @@
                     </div>
                     <div class="asset-item" id="assetAlpha">
                         <h3>Minecraft Feline Ears</h3>
-                        <p>The Feline ear rig was originally developped on the Neokat rig, but was eventually ported into it's own separate entity, now using it's own Material and driver system</p>
+                        <p>The Feline ear rig was originally developped on the Neokat rig, but was eventually ported
+                            into it's own separate entity, now using it's own Material and driver system</p>
                         <div class="button">View Wiki</div>
 
                         <div class="divider" data-style="vertical"></div>
@@ -115,7 +114,9 @@
                 <div class="flexbox-2">
                     <div class="asset-item" id="assetAlpha">
                         <h3>Minecraft Feline Tail</h3>
-                        <p>Developed a long time ago, this Tail rig was designed to be simple and easy to use, therefore it uses a simple wool texture from Minecraft and basic Geometry and rigging, though a more advanced rig is in planning</p>
+                        <p>Developed a long time ago, this Tail rig was designed to be simple and easy to use, therefore
+                            it uses a simple wool texture from Minecraft and basic Geometry and rigging, though a more
+                            advanced rig is in planning</p>
                         <div class="button">View Wiki</div>
 
                         <div class="divider" data-style="vertical"></div>
@@ -123,7 +124,9 @@
                     </div>
                     <div class="asset-item" id="assetAlpha">
                         <h3>Sakura's Materal Pack</h3>
-                        <p>The Material pack is a collection of multiple materials, all being either procedural or semi-procedural. The Wiki will consist of details on how each Material works and even some ways to modify the Material</p>
+                        <p>The Material pack is a collection of multiple materials, all being either procedural or
+                            semi-procedural. The Wiki will consist of details on how each Material works and even some
+                            ways to modify the Material</p>
                         <div class="button">View Wiki</div>
 
                         <div class="divider" data-style="vertical"></div>
@@ -186,6 +189,7 @@
                 window.open('http://git.sakura-sedaia.com/sacr-mc-rig', "_blank");
             }
         }
+
         function openSACRExperimental() {
             window.confirm("You are about to be led to an external page, are you sure you want to continue?"); {
                 window.open('http://git.sakura-sedaia.com/sacr_experimental', "_blank");
