Finished Desktop Layouts and CSS for Main Page and Rigs page done

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 						<div class="nav-item" onclick="openInternal('index.html')">Home</div>
 						<div class="nav-item" onclick="openInternal('rigs.html')">Rigs</div>
 						<div class="nav-item" onclick="openInternal('wiki/wiki-home.html')">Rig Wiki</div>
+						<div class="nav-item" onclick="openInternal('contact.html')">Contact</div>
 					</div>
 				</div>
 			</div>
@@ -58,7 +59,7 @@
 				has partnered with multiple studios. I got my start in 2012 with the creation of my first Channel, at
 				the time... named PokeKid206, yeah terrible name right? Well that channel got me started inside the
 				YouTube atmosphere, though about 2 years later it would be pretty well abandoned as I made the complete
-				change over to my current Channel, originally called Ender Graphics but has evolved into my current
+				change over to my current Channel, originally called Ender GFX but has evolved into my current
 				personality and name, Sakura Sedaia.
 			</p>
 			<br>
@@ -117,28 +118,22 @@
 		<div class="clusterfuck">
 			<div>
 				<h4>Site Links</h4>
-				<div onclick="openInternal('index.html')"><span class="link" data-style="default">Home</span></div>
-				<div><span class="link" data-style="default">Contact</span></div>
-				<div onclick="openInternal('rig-library.html')"><span class="link" data-style="default">Rigs</span>
+				<div onclick="openInternal('index.html')"><span>Home</span></div>
+				<div><span>Contact</span></div>
+				<div onclick="openInternal('rig-library.html')"><span>Rigs</span>
 				</div>
 			</div>
 			<div>
 				<h4>Social Links</h4>
-				<div onclick="openExternal('https://youtube.com/c/SakuraSedaia')"><span class="link"
-						data-style="default">Youtube</span></div>
-				<div onclick="openExternal('https://github.com/SakuraSedaia')"><span class="link"
-						data-style="default">GitHub</span></div>
-				<div onclick="openExtennal('https://codepen.io/Sakura-Sedaia')"><span class="link"
-						data-style="default">Codepen</span></div>
+				<div onclick="openExternal('https://youtube.com/c/SakuraSedaia')"><span >Youtube</span></div>
+				<div onclick="openExternal('https://github.com/SakuraSedaia')"><span>GitHub</span></div>
+				<div onclick="openExtennal('https://codepen.io/Sakura-Sedaia')"><span>Codepen</span></div>
 			</div>
 			<div>
 				<h4><span>External API's</span></h4>
-				<div onclick="openExternal('https://michalsnik.github.io/aos/')"><span class="link"
-						data-style="default">AoS.js</span></div>
-				<div onclick="openExternal('https://fonts.google.com/')"><span class="link" data-style="default">Google
-						Fonts</span></div>
-				<div onclick="openExternal('https://bansal.io/pattern-css')"><span class="link"
-						data-style="default">pattern.css</span></div>
+				<div onclick="openExternal('https://michalsnik.github.io/aos/')"><span>AoS.js</span></div>
+				<div onclick="openExternal('https://fonts.google.com/')"><span>Google Fonts</span></div>
+				<div onclick="openExternal('https://bansal.io/pattern-css')"><span>pattern.css</span></div>
 			</div>
 		</div>
 		<div class="trademarks">
