--- a/wiki/wiki.html
+++ b/wiki/wiki.html
@@ -129,7 +129,7 @@
                     <div class="asset-item" id="assetAlpha">
                         <h3>Minecraft Feline Ears</h3>
                         <p>The Feline ear rig was originally developped on the Neokat rig, but was eventually ported
-                            into it's own separate entity, now using it's own Material and driver system</p>
+                            into it's own separate entity, now using it's own Material and driver system, will be transitioned into a Ear Pack including my other ear rigs.</p>
                         <div class="button">View Wiki</div>
 
                         <div class="divider" data-style="vertical"></div>
