--- a/rigs.html
+++ b/rigs.html
@@ -40,6 +40,7 @@
 					<div class="nav-item" onclick="openInternal('index.html')">Home</div>
 					<div class="nav-item" onclick="openInternal('rigs.html')">Rigs</div>
 					<div class="nav-item" onclick="openInternal('wiki/wiki.html')">Rig Wiki</div>
+					<div class="nav-item" onclick="openInternal('contact.html')">Contact</div>
 				</div>
 			</div>
 		</div>
