--- a/rigs.html
+++ b/rigs.html
@@ -39,7 +39,7 @@
 				<div class="nav-content">
 					<div class="nav-item" onclick="openInternal('index.html')">Home</div>
 					<div class="nav-item" onclick="openInternal('rigs.html')">Rigs</div>
-					<div class="nav-item" onclick="openInternal('wiki/wiki.html')">Rig Wiki</div>
+					<div class="nav-item" onclick="openInternal('wiki/wiki.html')">Rig Wiki (WIP)</div>
 					<div class="nav-item" onclick="openInternal('contact.html')">Contact</div>
 				</div>
 			</div>
@@ -53,15 +53,15 @@
 		<div class="rig-content">
 		<h2>SACR Rig downloads</h2>
 		<p>Download the latest stable and experimental builds here. Stable releases are the more stable rigs while Experimental rigs are generally more up to date but can have some issues regarding stability, once a Experimental Rig is deemed stable enough it is then listed as the latest stable rig.</p>
-		<div id="stableRig" class="rig-button">
+		<div id="stableRig" class="rig-button"  onclick="downloadRig('SACR_R5.zip')">
 			Stable
 			<br>
 			<span>R5 | 01/06/2021</span>
 		</div>
-		<div id="experimentalRig" class="rig-button">
+		<div id="experimentalRig" class="rig-button" onclick="downloadRig('SACR_E5.1_02.blend')">
 			Experimental
 			<br>
-			<span>E5.1_01 | 11/06/2021</span>
+			<span>E5.1_02 | 24/06/2021</span>
 		</div>
 		<div class="hyperlinks">
 		<ul>
