--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--  Styles  -->
 	<link rel="stylesheet" href="assets/styles/main-style.css">
+	<link rel="stylesheet" href="lost-angel/lost-angel.css">
 	<link href="https://unpkg.com/pattern.css" rel="stylesheet">
 </head>
 
@@ -112,6 +113,13 @@
 			</div>
 		</div>
 		<!-- ABOUT END -->
+
+		<!-- Lost Angel Announcement -->
+		<div class="lost-angel-frontpage">
+			<h1>The Lost Angel</h1>
+			<h2>A fight for survival</h2>
+			<p>No set release date, more information coming soon</p>
+		  </div>
 	</div>
 	<!-- FOOT BEGIN -->
 	<div class="footer pattern-grid-lg">
