Updated Rigs Page

--- a/rigs.html
+++ b/rigs.html
@@ -53,15 +53,15 @@
 		<div class="rig-content">
 		<h2>SACR Rig downloads</h2>
 		<p>Download the latest stable and experimental builds here. Stable releases are the more stable rigs while Experimental rigs are generally more up to date but can have some issues regarding stability, once a Experimental Rig is deemed stable enough it is then listed as the latest stable rig.</p>
-		<div id="stableRig" class="rig-button"  onclick="downloadRig('SACR_R5.zip')">
+		<div id="stableRig" class="rig-button"  onclick="downloadRig('SACR_R5.1.zip')">
 			Stable
 			<br>
-			<span>R5 | 01/06/2021</span>
+			<span>R5.1 | 07/08/2021</span>
 		</div>
-		<div id="experimentalRig" class="rig-button" onclick="downloadRig('SACR_E5.1_02.blend')">
-			Experimental
+		<div id="experimentalRig" class="rig-button hidden-download" onclick="downloadRig(null)">
+			Experimental (Not Active)
 			<br>
-			<span>E5.1_02 | 24/06/2021</span>
+			<span>None | N/A</span>
 		</div>
 		<div class="hyperlinks">
 		<ul>
